// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#cogs/cogs/password/field <Field /> With additional props Default value is a string renders 1`] = `
<input
  className="MOCK CLASSNAME"
  defaultValue="MOCK VALUE"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  readOnly={true}
  required={true}
  type="password"
/>
`;

exports[`#cogs/cogs/password/field <Field /> With additional props Value is a string renders 1`] = `
<input
  className="MOCK CLASSNAME"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  readOnly={true}
  required={true}
  type="password"
  value="MOCK VALUE"
/>
`;

exports[`#cogs/cogs/password/field <Field /> With required props renders 1`] = `
<input
  className="MOCK CLASSNAME"
  disabled={false}
  name="MOCK NAME"
  readOnly={false}
  required={false}
  type="password"
  value="MOCK VALUE"
/>
`;
